Relocate example syntax test files from `/tests` to `/src/tests`.